syntax = "proto3";

import "anemos/protobeam/examples/basic.proto";
import "anemos/options.proto";

option java_package = "io.anemos.protobeam.examples";
option java_multiple_files = true;

package anemos.protobeam.examples;

message ProtoBeamOptionMessage {
    string test_name = 1;
    int32 test_index = 2;
    string option_deprecated = 3 [deprecated = true];
    string option_description = 4 [(anemos.field_meta) = {
        description: "A very detailed description"
    }];


}